# pdf-embedding-pipeline

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL.md  README.md  TODO.md  compile_commands.json  test.py  vcpkg.json
.github/workflows/: windows-release.yml
include/: consts.hpp  db.hpp  embedding_vector.hpp  embeddings_client.hpp  embeddings_types.h  faiss_store.hpp  init.hpp  logger.hpp  pdf_donwloader.hpp  pdf_processor.hpp  pipeline.hpp  queries.hpp  recursive_character_text_splitter.hpp  uuid.hpp
include/embedding_engine/: db.hpp
models/: document_model.hpp  embedding_chunks.hpp
src/: db.cpp  embedding_client.cpp  faiss_store.cpp  main.cpp  pdf_donwloader.cpp  pdf_processor.cpp  pipeline.cpp  recursive_character_text_splitter.cpp
